# atlantis-UI-base

./: Cargo.toml  NOTE.md  README.md  build.rs
.github/workflows/: codeql.yml
docs/: DEVELOPER_DOCS.md  MODULES_OVERVIEW.md  USER_GUIDE.md
examples/: test_app.rs
src/: Makefile  atlbase.h  design.h  design.rs  dialogs.h  helper.h  helper.rs  language.h  language.mk  lib.rs  macros.rs
src/design/: chooser.rs  create_entry.c  create_label_icon.c  create_special_button.c  dialogs.rs  file_chooser.c  home_page.c  switch_page.c  theme.rs  utils.rs
src/design/chooser/: file_chooser.c  file_chooser.rs  folder_chooser.c  folder_chooser.rs
src/design/dialogs/: about_dialog.c  about_dialog.rs  dialog.c  dialog.rs  dialog_custom.rs  dialog_entry.c  dialog_entry.rs  dialog_function.rs  dialog_multi_progress.c  dialogs.c  dialogs_spinner.c  dialogs_spinner.rs  image_dialog.rs  standard_dialogs.rs
src/design/theme/: load_adw_provider.rs
src/design/utils/: command_pkexec_ui.rs  create_entry.rs  create_label_icon.rs  create_special_button.rs
src/helper/: commands.rs  configuration.rs  file.rs  file_filter.c  filesystem.rs  free_wrapper.c  get_config_value.c  language.rs  log.rs  make_path.c  trim_and_clean.c
src/helper/commands/: command_exists.c  command_exists.rs  command_pkexec.c  command_pkexec.rs  execute_command.c  execute_command.rs  open_terminal_desktop.c  open_terminal_desktop.rs  open_url.c  open_url.rs
src/helper/configuration/: application_environment.rs  toml_config.rs
src/helper/file/: add_line_file.rs  file_filter.rs  get_config_value.rs  temp_app_file.rs  trim_and_clean.rs  write_file.rs
src/helper/filesystem/: delete_directory.c  delete_directory.rs  delete_files.c  delete_files.rs  directory_exists.c  directory_exists.rs  expand_path.c  expand_path.rs  home_dir.c  home_dir.rs  make_path.c  make_path.rs  search_file_directory.c  search_file_directory.rs  search_string_name.rs
src/helper/language/: language.rs
src/helper/log/: write_log.c  write_log.rs  write_log_text.c  write_log_text.rs
src/language/: bind_language.c  language.c
src/po/: Makefile  de.po  en.po
src/test/: test.c
src/theme/: custom_css_adw.c  load_adw_provider.c
